--- a/style.css
+++ b/style.css
@@ -242,3 +242,39 @@
   .Btn:active {
     transform: translate(2px ,2px);
   }
+
+  .insta-section{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 20px;
+  }
+
+  .section-content{
+    border: solid black 1px;
+    width: 90em;
+    height: auto;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+  }
+
+.cart-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: .3em;
+  background-color: #ffe194;
+  border-radius: 20px;
+  padding: .5em;
+}
+
+  .cart-btn img{
+    width: 1.2em;
+    height: 1.2em;
+  }
