--- a/src/components/RestMenu.css
+++ b/src/components/RestMenu.css
@@ -1,6 +1,6 @@
 .menu-container {
     width: 100%;
-    height: 100vh;
+    height: auto;
     margin: 0;
     padding: 0;
     background-color: #FFF8E1;
@@ -99,4 +99,27 @@
     width: 1.5vw;
     height: 1.5vw;
     margin-right: .5vw;
+}
+
+.menu-list {
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.menu-list h1 {
+    font-family: Gilroy, Gilroy ExtraBold;
+    font-size: 50px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.break-line{
+    width: 95%;
+    height: 1.5px;
+    background-color: #7c7c7dc3;
+    border-radius: 20px;
+    margin: 20px;
 }
